[package]
name = "lau-cryptography"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-cryptography"
description = "Cryptographic primitives and protocols — the math behind secure communication"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
rand = "0.8"
